--- a/assets/css/contenido.css
+++ b/assets/css/contenido.css
@@ -48,6 +48,7 @@
     flex-direction: column;
     gap: 8px;
     margin-bottom: 64px;
+    overflow: hidden;
     position: relative;
     width: 170px;
 }
@@ -56,7 +57,8 @@
 }
 
 .contenido__producto__img{
-    width: 170px;
+    background-size: center cover;
+    height: 170px;
 }
 
 .contenido__producto__titulo{
