Responsivo en progreso

--- a/assets/css/contenido.css
+++ b/assets/css/contenido.css
@@ -7,11 +7,11 @@
 }
 
 .contenido__container{
-    width: 80%;
+    width: 90%;
 }
 
 .contenido__categoria:first-child{
-    margin-top: 64px;
+    margin-top: 2.125rem;
 }
 
 .contenido__categoria__box{
@@ -27,19 +27,20 @@
 .contenido__categoria__titulo{
     color: #464646;
     font-weight: 700;
-    font-size: 32px;
+    font-size: 1.75rem;
     line-height: 38px;
 }
 
 .contenido__categoria__titulo--volver{
     color: #2A7AE4;
+    font-size: 1rem;
 }
 
 .contenido__categoria__productos{
     display: flex;
     flex-wrap: wrap;
     gap: 1%;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 .contenido__categoria__producto{
@@ -47,18 +48,18 @@
     display: flex;
     flex-direction: column;
     gap: 8px;
-    margin-bottom: 64px;
+    margin-bottom: 2.5rem;
     overflow: hidden;
     position: relative;
-    width: 170px;
+    width: 100%;
 }
-.contenido__categoria__producto--solo6:nth-child(n+7){
+.contenido__categoria__producto--solo6:nth-child(n+5){
     display: none;
 }
 
 .contenido__producto__img{
     background-size: center cover;
-    height: 170px;
+    width: 100%;
 }
 
 .contenido__producto__titulo{
@@ -100,4 +101,22 @@
 
 .invisible{
     display: none;
+}
+
+@media (min-width: 425px){
+    .contenido__container{
+        width: 80%;
+    }
+    .contenido__categoria:first-child{
+        margin-top: 64px;
+    }
+    .contenido__categoria__productos{
+        justify-content: flex-start;
+    }
+    .contenido__categoria__producto--solo6:nth-child(n+7){
+        display: none;
+    }
+    .contenido__producto__img{
+        height: 170px;
+    }
 }
