--- a/assets/css/banner.css
+++ b/assets/css/banner.css
@@ -15,15 +15,26 @@
     gap: 16px;
     height: 100%;
     justify-content: flex-end;
-    width: 80%;
+    width: 90%;
 }
 
 .banner__titulo{
-    font-size: 52px;
+    font-size: 2.25rem;
 }
 
 .banner__descripcion{
-    font-size: 22px;
+    font-size: 1.125rem;
     margin: 0;
 }
 
+@media (min-width: 425px){
+    .banner__box{
+        width: 80%;
+    }
+}
+
+@media (min-width: 768px){
+    .banner__titulo{
+        font-size: 52px;
+    }
+}
