--- a/assets/css/botones.css
+++ b/assets/css/botones.css
@@ -30,7 +30,7 @@
     background-color: transparent;
     border: none;
     color: #2A7AE4;
-    font-size: 22px;
+    font-size: 1.25rem;
     font-weight: bold;
     padding: 0;
 }
