--- a/assets/css/rodapie.css
+++ b/assets/css/rodapie.css
@@ -1,9 +1,18 @@
 .rodapie__principal{
     background-color: #EAF2FD;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    padding: 64px 10vw;
+    padding: 1.5rem 10%;
     width: 100%;
+}
+
+.rodapie__logo{
+    margin: 0 auto 1rem;
+}
+
+.rodapie__links{
+    margin-bottom: 2rem;
 }
 
 .rodapie__links__item{
@@ -11,14 +20,10 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;
-    margin-bottom: 24px;
+    margin-bottom: 0.75rem;
 }
 .rodapie__links__item:last-child{
     margin-bottom: 0;
-}
-
-.rodapie__formulario{
-    width: 50%;
 }
 
 .rodapie__desarrollador{
@@ -33,4 +38,20 @@
     font-size: 16px;
     line-height: 19px;
     text-align: center;
+}
+
+@media (min-width: 425px){
+    .rodapie__principal{
+        background-color: #EAF2FD;
+        display: flex;
+        justify-content: space-between;
+        padding: 64px 10vw;
+        width: 100%;
+    }
+    .rodapie__links__item{
+        margin-bottom: 24px;
+    }
+    .rodapie__formulario{
+        width: 50%;
+    }
 }
