--- a/assets/css/contenido.css
+++ b/assets/css/contenido.css
@@ -39,7 +39,7 @@
 .contenido__categoria__productos{
     display: flex;
     flex-wrap: wrap;
-    gap: 1%;
+    gap: 1vw;
     justify-content: center;
 }
 
@@ -52,9 +52,6 @@
     overflow: hidden;
     position: relative;
     width: 100%;
-}
-.contenido__categoria__producto--solo6:nth-child(n+5){
-    display: none;
 }
 
 .contenido__producto__img{
@@ -103,20 +100,31 @@
     display: none;
 }
 
-@media (min-width: 425px){
-    .contenido__container{
-        width: 80%;
+@media (max-width: 425px){
+    .contenido__categoria__producto--solo6:nth-child(n+5){
+        display: none;
     }
+}
+
+@media (min-width: 425px){
     .contenido__categoria:first-child{
         margin-top: 64px;
     }
     .contenido__categoria__productos{
         justify-content: flex-start;
     }
+    .contenido__categoria__producto{
+        width: 170px;
+    }
     .contenido__categoria__producto--solo6:nth-child(n+7){
         display: none;
     }
     .contenido__producto__img{
         height: 170px;
+    }
+}
+@media (min-width: 768px){
+    .contenido__container{
+        width: 80%;
     }
 }
