--- a/assets/css/rodapie.css
+++ b/assets/css/rodapie.css
@@ -51,6 +51,9 @@
     .rodapie__links__item{
         margin-bottom: 24px;
     }
+}
+
+@media (min-width: 768px){
     .rodapie__formulario{
         width: 50%;
     }
