--- a/assets/css/contenido.css
+++ b/assets/css/contenido.css
@@ -39,7 +39,7 @@
 .contenido__categoria__productos{
     display: flex;
     flex-wrap: wrap;
-    gap: 1vw;
+    gap: calc((100% - 170px * 6) / 5 );
     justify-content: center;
 }
 
